force-app/main/default/objects/Sysintelli__c/Sysintelli__c.object-meta.xml
<CustomObject>
    <description>A consulting services object</description>
    <label>Sysintelli</label>
    <nameField>
        <label>Sysintelli Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Systintellis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>