force-app/main/default/objects/Sysintelli__c/fields/Company_Name_realtion__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_realtion__c</fullName>
    <formula>Account__r.Name + &quot;-&quot; + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Name realtion</label>
    <type>Text</type>
</CustomField>