force-app/main/default/objects/Sysintelli__c/fields/Concerned_Person__c.field-meta.xml
<CustomField>
    <fullName>Concerned_Person__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Concerned Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Systintellis</relationshipLabel>
    <relationshipName>Systintellis</relationshipName>
    <type>Lookup</type>
</CustomField>