force-app/main/default/objects/Sysintelli__c/fields/Consultant_Employed__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Employed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To see whether the consultant is employed or not</description>
    <inlineHelpText>Check this when the consultant is employed</inlineHelpText>
    <label>Consultant Employed</label>
    <type>Checkbox</type>
</CustomField>