force-app/main/default/objects/Sysintelli__c/fields/Employee_blog__c.field-meta.xml
<CustomField>
    <fullName>Employee_blog__c</fullName>
    <label>Employee blog</label>
    <type>Url</type>
</CustomField>