force-app/main/default/objects/Sysintelli__c/fields/Employee_discount__c.field-meta.xml
<CustomField>
    <fullName>Employee_discount__c</fullName>
    <label>Employee discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>