force-app/main/default/objects/Sysintelli__c/fields/Employee_Graduate_Date__c.field-meta.xml
<CustomField>
    <fullName>Employee_Graduate_Date__c</fullName>
    <label>Employee Graduate Date</label>
    <type>Date</type>
</CustomField>