force-app/main/default/objects/Sysintelli__c/fields/Employee_location__c.field-meta.xml
<CustomField>
    <fullName>Employee_location__c</fullName>
    <label>Employee location</label>
    <scale>3</scale>
    <type>Location</type>
</CustomField>