force-app/main/default/objects/Sysintelli__c/fields/Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number__c</fullName>
    <description>This field will give the details of the employee</description>
    <displayFormat>{YYYY}{MM}-{0}</displayFormat>
    <inlineHelpText>Employee number with 2 digit decimal</inlineHelpText>
    <label>Employee Number</label>
    <type>AutoNumber</type>
</CustomField>