force-app/main/default/objects/Sysintelli__c/fields/Employee_phone_number__c.field-meta.xml
<CustomField>
    <fullName>Employee_phone_number__c</fullName>
    <label>Employee phone number</label>
    <type>Phone</type>
</CustomField>