force-app/main/default/objects/Sysintelli__c/fields/Employee_rate_per_hour__c.field-meta.xml
<CustomField>
    <fullName>Employee_rate_per_hour__c</fullName>
    <description>This field describes employee rate per hour</description>
    <inlineHelpText>Employee bill rate</inlineHelpText>
    <label>Employee rate per hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>