force-app/main/default/objects/Sysintelli__c/fields/Employment_type__c.field-meta.xml
<CustomField>
    <fullName>Employment_type__c</fullName>
    <label>Employment type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full time</fullName>
            </value>
            <value>
                <fullName>C2C</fullName>
            </value>
            <value>
                <fullName>W2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>