force-app/main/default/objects/Sysintelli__c/recordTypes/Full_time.recordType-meta.xml
<RecordType>
    <fullName>Full_time</fullName>
    <active>true</active>
    <description>This record type is chosen for the Full time employee</description>
    <label>Full time</label>
</RecordType>