force-app/main/default/objects/Sysintelli__c/validationRules/Employee_rate_per_hour.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_rate_per_hour</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Consultant_Employed__c,  ISBLANK(Employee_rate_per_hour__c)  , FALSE)</errorConditionFormula>
    <errorDisplayField>Employee_rate_per_hour__c</errorDisplayField>
    <errorMessage>Please fill out the employee billable hour rate</errorMessage>
</ValidationRule>